kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: osee-kenya
  labels:
    name: osee-kenya
