kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osee-kenya
  labels:
    app: osee-kenya
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: osee-kenya
